// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/IRS Reports/JurisdictionReport display correct headers when Spray Areas are loaded: header on Spray Areas display 0 1`] = `"Name"`;

exports[`components/IRS Reports/JurisdictionReport display correct headers when Spray Areas are loaded: header on Spray Areas display 1 1`] = `"Structures on the ground"`;

exports[`components/IRS Reports/JurisdictionReport display correct headers when Spray Areas are loaded: header on Spray Areas display 2 1`] = `"Found"`;

exports[`components/IRS Reports/JurisdictionReport display correct headers when Spray Areas are loaded: header on Spray Areas display 3 1`] = `"Sprayed"`;

exports[`components/IRS Reports/JurisdictionReport display correct headers when Spray Areas are loaded: header on Spray Areas display 4 1`] = `"Spray Coverage (Effectiveness)"`;

exports[`components/IRS Reports/JurisdictionReport display correct headers when Spray Areas are loaded: header on Spray Areas display 5 1`] = `"Found Coverage"`;

exports[`components/IRS Reports/JurisdictionReport display correct headers when Spray Areas are loaded: header on Spray Areas display 6 1`] = `"Spray Success Rate (PMI SC)"`;

exports[`components/IRS Reports/JurisdictionReport display correct headers when Spray Areas are loaded: header on Spray Areas display 7 1`] = `"Structures remaining to spray to reach 90% SE"`;

exports[`components/IRS Reports/JurisdictionReport display correct headers when Spray Areas are loaded: header on Spray Areas display 8 1`] = `"Reviewed with decision"`;

exports[`components/IRS Reports/JurisdictionReport display correct headers when provinces are loaded: header on provinces display 0 1`] = `"Name"`;

exports[`components/IRS Reports/JurisdictionReport display correct headers when provinces are loaded: header on provinces display 1 1`] = `"Total Spray Areas"`;

exports[`components/IRS Reports/JurisdictionReport display correct headers when provinces are loaded: header on provinces display 2 1`] = `"Targeted Spray Areas"`;

exports[`components/IRS Reports/JurisdictionReport display correct headers when provinces are loaded: header on provinces display 3 1`] = `"Spray areas visited"`;

exports[`components/IRS Reports/JurisdictionReport display correct headers when provinces are loaded: header on provinces display 4 1`] = `"% visited Spray Areas Effectively sprayed"`;

exports[`components/IRS Reports/JurisdictionReport display correct headers when provinces are loaded: header on provinces display 5 1`] = `"Total Structures"`;

exports[`components/IRS Reports/JurisdictionReport display correct headers when provinces are loaded: header on provinces display 6 1`] = `"Targeted Structures"`;

exports[`components/IRS Reports/JurisdictionReport display correct headers when provinces are loaded: header on provinces display 7 1`] = `"Sprayed Structures"`;

exports[`components/IRS Reports/JurisdictionReport display correct headers when provinces are loaded: header on provinces display 8 1`] = `"Spray coverage of targeted (Progress)"`;

exports[`components/IRS Reports/JurisdictionReport display correct headers when provinces are loaded: header on provinces display 9 1`] = `"Structures Found"`;

exports[`components/IRS Reports/JurisdictionReport display correct headers when provinces are loaded: header on provinces display 10 1`] = `"Found Coverage"`;

exports[`components/IRS Reports/JurisdictionReport display correct headers when provinces are loaded: header on provinces display 11 1`] = `"Success Rate"`;

exports[`components/IRS Reports/JurisdictionReport drills down correctly 1`] = `
Object {
  "CellComponent": [Function],
  "columns": Any<Object>,
  "data": Any<Object>,
  "extraCellProps": Object {
    "urlPath": "/intervention/irs/report/727c3d40-e118-564a-b231-aac633e6abce",
  },
  "getTdProps": [Function],
  "hasChildren": [Function],
  "identifierField": "jurisdiction_id",
  "linkerField": "jurisdiction_name",
  "loading": false,
  "loadingComponent": [Function],
  "paginate": false,
  "parentIdentifierField": "jurisdiction_parent_id",
  "renderNullDataComponent": [Function],
  "resize": true,
  "rootParentId": "",
  "useDrillDown": true,
}
`;

exports[`components/IRS Reports/JurisdictionReport drills down correctly 2`] = `
Object {
  "CellComponent": [Function],
  "columns": Any<Object>,
  "data": Any<Object>,
  "extraCellProps": Object {
    "urlPath": "/intervention/irs/report/727c3d40-e118-564a-b231-aac633e6abce",
  },
  "getTdProps": [Function],
  "hasChildren": [Function],
  "identifierField": "jurisdiction_id",
  "linkerField": "jurisdiction_name",
  "loading": false,
  "loadingComponent": [Function],
  "paginate": false,
  "parentIdentifierField": "jurisdiction_parent_id",
  "renderNullDataComponent": [Function],
  "resize": true,
  "rootParentId": "22bc44dd-752d-4c20-8761-617361b4f1e7",
  "useDrillDown": true,
}
`;

exports[`components/IRS Reports/JurisdictionReport drills down correctly 3`] = `
Object {
  "CellComponent": [Function],
  "columns": Any<Object>,
  "data": Any<Object>,
  "extraCellProps": Object {
    "urlPath": "/intervention/irs/report/727c3d40-e118-564a-b231-aac633e6abce",
  },
  "getTdProps": [Function],
  "hasChildren": [Function],
  "identifierField": "jurisdiction_id",
  "linkerField": "jurisdiction_name",
  "loading": false,
  "loadingComponent": [Function],
  "paginate": false,
  "parentIdentifierField": "jurisdiction_parent_id",
  "renderNullDataComponent": [Function],
  "resize": true,
  "rootParentId": "fd5a22ba-fa0e-4fdc-ae1c-1db8965b7b43",
  "useDrillDown": true,
}
`;

exports[`components/IRS Reports/JurisdictionReport drills down correctly 4`] = `
Object {
  "CellComponent": [Function],
  "columns": Any<Object>,
  "data": Any<Object>,
  "extraCellProps": Object {
    "urlPath": "/intervention/irs/report/727c3d40-e118-564a-b231-aac633e6abce",
  },
  "getTdProps": [Function],
  "hasChildren": [Function],
  "identifierField": "jurisdiction_id",
  "linkerField": "jurisdiction_name",
  "loading": false,
  "loadingComponent": [Function],
  "paginate": false,
  "parentIdentifierField": "jurisdiction_parent_id",
  "renderNullDataComponent": [Function],
  "resize": true,
  "rootParentId": "8f1fd4cf-264d-4ed6-8838-e538c5845d46",
  "useDrillDown": true,
}
`;

exports[`components/IRS Reports/JurisdictionReport drills down correctly 5`] = `
Object {
  "CellComponent": [Function],
  "columns": Any<Object>,
  "data": Any<Object>,
  "extraCellProps": Object {
    "urlPath": "/intervention/irs/report/727c3d40-e118-564a-b231-aac633e6abce",
  },
  "getTdProps": [Function],
  "hasChildren": [Function],
  "identifierField": "jurisdiction_id",
  "linkerField": "jurisdiction_name",
  "loading": false,
  "loadingComponent": [Function],
  "paginate": false,
  "parentIdentifierField": "jurisdiction_parent_id",
  "renderNullDataComponent": [Function],
  "resize": true,
  "rootParentId": "2bf9915d-8725-4061-983d-5938802ac0f0",
  "useDrillDown": true,
}
`;

exports[`components/IRS Reports/JurisdictionReport renders correctly 1`] = `
Object {
  "CellComponent": [Function],
  "columns": Any<Object>,
  "data": Any<Object>,
  "extraCellProps": Object {
    "urlPath": "/intervention/irs/report/727c3d40-e118-564a-b231-aac633e6abce",
  },
  "getTdProps": [Function],
  "hasChildren": [Function],
  "identifierField": "jurisdiction_id",
  "linkerField": "jurisdiction_name",
  "loading": false,
  "loadingComponent": [Function],
  "paginate": false,
  "parentIdentifierField": "jurisdiction_parent_id",
  "renderNullDataComponent": [Function],
  "resize": true,
  "rootParentId": "",
  "useDrillDown": true,
}
`;

exports[`components/IRS Reports/JurisdictionReport renders correctly: breadcrumbs 1`] = `
Array [
  <li
    className="breadcrumb-item"
  >
    <Link
      key="0"
      to="/"
    >
      <LinkAnchor
        href="/"
        navigate={[Function]}
      >
        <a
          href="/"
          onClick={[Function]}
        >
          Home
        </a>
      </LinkAnchor>
    </Link>
  </li>,
  <li
    className="breadcrumb-item"
  >
    <Link
      key="1"
      to="/intervention/irs/report"
    >
      <LinkAnchor
        href="/intervention/irs/report"
        navigate={[Function]}
      >
        <a
          href="/intervention/irs/report"
          onClick={[Function]}
        >
          IRS Reporting
        </a>
      </LinkAnchor>
    </Link>
  </li>,
  <li
    aria-current="page"
    className="active breadcrumb-item"
  >
    IRS 2019-09-05 TEST
  </li>,
]
`;

exports[`components/IRS Reports/JurisdictionReport renders correctly: page title 1`] = `
<h3
  className="mb-3 page-title"
>
  IRS Reporting: IRS 2019-09-05 TEST
</h3>
`;

exports[`components/IRS Reports/JurisdictionReport renders correctly: title column styling 1`] = `
Object {
  "boxSizing": "border-box",
  "cursor": "pointer",
  "flex": "200 0 auto",
  "minWidth": "360px",
  "position": "relative",
  "width": "200px",
}
`;
